命名規則見直し。部品、倉庫、在庫テーブル追加。

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -1,8 +1,8 @@
-server.servlet.context-path=/simpleProject
+server.servlet.context-path=/
 server.port=18090
 
 # DBの初期化を実行する always:する、never:しない
-spring.datasource.initialization-mode=never
+spring.datasource.initialization-mode=always
 spring.datasource.schema=classpath:schema.sql
 spring.datasource.data=classpath:data.sql
 
